--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "sequelize": "^6.21.4"
   },
   "scripts": {
-    "test": "just --detectOpenHandles"
+    "test": "jest --detectOpenHandles"
   }
 }
